--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "gh-pages": "^6.3.0",
     "svelte": "^5.20.2",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "boxicons": "^2.1.4"
   }
 }
